# EduCalc

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  test.html  todo.todo  typy_znamek.md
.github/workflows/: rust.yml
app/: globals.css  page.tsx
assets/: last_grades.txt
src/: main.rs  prev.rs
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  term.rs
tauri/: package-lock.json  package.json
tauri/app/: globals.css  page.tsx
tauri/src-tauri/: tauri.conf.json
tauri/src-tauri/src/: main.rs
