[package]
name = "edupage_grade_calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.19.0" 
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
chrono = { version = "0.4.19", features = ["serde"] }
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"  
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
colored="2.1.0"
rpassword = "7.3"
