[package]
name = "edupage_grade_calculator"
version = "0.1.0"
edition = "2021"
authors = ["divear <divear.cz@gmail.com>"]
license = "GPL3"
description = "A script to calculate your EduPage average grade"
readme = "README.md"
homepage = "https://github.com/divear/edupage-prumer-calculator"
repository = "https://github.com/divear/edupage-prumer-calculator"
keywords = ["cli", "EduPage", "grade"]
categories = ["command-line-utilities"]


[dependencies]
dotenvy = "0.15.7"  
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
colored="2.1.0"
rpassword = "7.3"
