[package]
name = "EduCalc"
version = "0.3.0"
edition = "2021"
authors = ["divear <divear.cz@gmail.com>"]
license = "GPL3"
description = "A script to calculate your EduPage average grade"
readme = "README.md"
homepage = "https://github.com/divear/EduCalc"
repository = "https://github.com/divear/EduCalc"
keywords = ["cli", "EduPage", "grade", "EduCalc"]
categories = ["command-line-utilities"]
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = [] }

dotenvy = "0.15.7"  
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"] }
colored="2.1.0"
rpassword = "7.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
